hphp/hack/test/typecheck/reactive/rx_superglobals10.php
<?hh

<<__Rx>>
function f($x) {
  $a = $GLOBALS;
}
